fix macos boostrap problem